# graphrag_again

./: .gitignore  CLAUDE.md  README.md  __init__.py  demo_extraction.py  extraction_data.jsonl  extraction_results.json  main.py  plan.md  plan_triplets.md  pyproject.toml  table_schema.txt  test_pipeline.py  test_refactored_pipeline.py  triplet_results.json
chunking/: README.md  __init__.py  chunker.py  run_chunker.py
data_resolution/: README.md  __init__.py  connection_discoverer.py  entity_resolver.py  models.py  relationship_resolver.py  run_resolution.py  show_last_run.py
db/: README.md  __init__.py  interface.py  knowledge_graph.db  models.py  peek_database.py  plot_config.json  schema.py  visualize_graph.py  visualize_graph_interactive.py
entity_extraction/: README.md  __init__.py  entity_types.py  extractor.py  models.py  run_extraction.py  triplet_generator.py  triplet_generator_class.py
inspirations/: former_testing_scenarios.md
sources/: table_schema.txt
sources/extracted_texts/agencyanalytics_texts/: agencyanalytics_page_1.txt  agencyanalytics_page_10.txt  agencyanalytics_page_11.txt  agencyanalytics_page_12.txt  agencyanalytics_page_13.txt  agencyanalytics_page_14.txt  agencyanalytics_page_15.txt  agencyanalytics_page_16.txt  agencyanalytics_page_17.txt  agencyanalytics_page_18.txt  agencyanalytics_page_19.txt  agencyanalytics_page_2.txt  agencyanalytics_page_20.txt  agencyanalytics_page_21.txt  agencyanalytics_page_22.txt  agencyanalytics_page_23.txt  agencyanalytics_page_24.txt  agencyanalytics_page_25.txt  agencyanalytics_page_26.txt  (+25 more)
(+110 files in other folders)
