[project]
name = "graphrag-again"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.1.1",
]
